[tool.poetry]
name = "volatility-surface"
version = "0.1.0"
description = "Volatility surface visualisation and analysis tool"
authors = ["Rob Konstanty-Nicholson"]
readme = "README.md"
packages = [
    { include = "volsurface", from = "src" }
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.1"
pandas = "^2.2.3"
scipy = "^1.15.0"
matplotlib = "^3.10.0"
plotly = "^5.24.1"
fastapi = ">=0.109.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
httpx = ">=0.26.0"
starlette = ">=0.36.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
mypy = "^1.14.1"
isort = "^5.13.2"
pytest-cov = "^6.0.0"
httpx = "^0.28.1"
pytest-asyncio = "^0.25.2"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"